--- a/intro_kim/css/introkim_style.css
+++ b/intro_kim/css/introkim_style.css
@@ -1,8 +1,10 @@
 @charset "UTF-8";
 
-* {
-    scroll-behavior: auto !important;
-}
+/* * {
+    margin: 0 auto;
+    box-sizing: border-box;
+    scroll-behavior: smooth;
+} */
 
 body {
     background-color: #F5F5F5;
@@ -98,7 +100,6 @@ section {
     background: var(--subRed2-900);
     padding: 0 10px;
     display: inline-block;
-
 }
 
 .main_cach .txt em {
